<resources>
    <string name="app_name">CorutinHomeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_quantity">Initial quantity</string>
    <string name="current_quantity">Current quantity</string>
    <string name="add">add</string>
    <string name="reset">reset</string>
    <string name="red">red</string>

    <style name="StyleBtn" parent="Widget.AppCompat.Button">
        <item name="android:textSize">16sp</item>
        <item name="backgroundTint">#B97A61</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
        <item name="android:padding">10dp</item>
    </style>

    <style name="StyleTvWatch" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
        <item name="android:gravity">center</item>
    </style>

    <style name="StyleEdWatch" parent="Widget.AppCompat.EditText">
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
        <item name="android:gravity">center</item>
        <item name="android:backgroundTint">@color/black</item>
        <item name="android:textColorHint">@color/black</item>
    </style>
</resources>